feat: Redefined the recommendation service implementation
