# docs/swagger.json
@@ -1394,7 +1394,7 @@
                     "200": {
                         "description": "Users Retrieved",
                         "schema": {
-                            "$ref": "#/definitions/schema.DocUsersResponse"
+                            "$ref": "#/definitions/schema.DocRecUsersResponse"
                         }
                     },
                     "400": {
@@ -2310,7 +2310,7 @@
                     "200": {
                         "description": "Projects Retreived",
                         "schema": {
-                            "$ref": "#/definitions/schema.DocProjectsResponse"
+                            "$ref": "#/definitions/schema.DocRecProjectsResponse"
                         }
                     },
                     "401": {
@@ -3849,13 +3849,24 @@
                 }
             }
         },
-        "schema.DocProjectsResponse": {
+        "schema.DocRecProjectsResponse": {
             "type": "object",
             "properties": {
                 "projects": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/schema.ProjectResponse"
+                        "$ref": "#/definitions/schema.RecProjectResponse"
+                    }
+                }
+            }
+        },
+        "schema.DocRecUsersResponse": {
+            "type": "object",
+            "properties": {
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.RecProfileResponse"
                     }
                 }
             }
@@ -3895,17 +3906,6 @@
             "properties": {
                 "user": {
                     "$ref": "#/definitions/schema.UserProfileResponse"
-                }
-            }
-        },
-        "schema.DocUsersResponse": {
-            "type": "object",
-            "properties": {
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schema.UserProfileResponse"
-                    }
                 }
             }
         },
@@ -4148,6 +4148,30 @@
                 },
                 "views": {
                     "type": "integer"
+                }
+            }
+        },
+        "schema.RecProfileResponse": {
+            "type": "object",
+            "properties": {
+                "score": {
+                    "type": "number",
+                    "format": "float32"
+                },
+                "user": {
+                    "$ref": "#/definitions/schema.UserProfileResponse"
+                }
+            }
+        },
+        "schema.RecProjectResponse": {
+            "type": "object",
+            "properties": {
+                "project": {
+                    "$ref": "#/definitions/schema.ProjectResponse"
+                },
+                "score": {
+                    "type": "number",
+                    "format": "float32"
                 }
             }
         },
