# schema/rec.go
@@ -1,5 +1,15 @@
 package schema
 
 type RecResponse struct {
-	IDs []string
+	Res map[string]float32
+}
+
+type RecProjectResponse struct {
+	Project ProjectResponse
+	Score   float32
+}
+
+type RecProfileResponse struct {
+	User  UserProfileResponse
+	Score float32
 }
